--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div id="left-head">
+            <img src="./assets/img/logo-small.png" alt="">
+            <span class="header-span">Perché Dropbox</span>
+            <span class="header-span">Funzioni</span>
+            <span class="header-span">Piani e Prezzi</span>
+        </div>
+
+        <div id="right-head">
+            <span class="header-span">Supporto</span>
+            <span class="header-span">Contatta l'ufficio venditore</span>
+            <span class="header-span">Accedi</span>
+            <span class="button-blue">Inizia</span>
+        </div>
+    </header>
 </body>
 </html>
