sect background blue

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dropbox</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -22,5 +24,26 @@
             <span class="button-blue">Inizia</span>
         </div>
     </header>
+    <!-- FINE HEADER -->
+
+    <!-- SEZIONE 1 (BLUE) -->
+    <div id="sect-1">
+        <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+
+        <div id="text-img-container">
+            <div id="text-sect1">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero blanditiis quia quis ullam! Enim qui possimus ea ullam, dolorem illo quas iure perspiciatis ipsa! Aperiam aliquid obcaecati dolorem consectetur numquam?</p>
+                <span class="button-blue">Inizia la tua prova gratuita</span>
+                <p>Annulla in qualsiasi momento</p>
+                <a href=""><i class="fa-solid fa-arrow-down"></i></a>
+            </div>
+            
+            <figure>
+                <img src="./assets/img/jumbo.png" alt="">
+            </figure>
+        </div>
+    </div>
+
+
 </body>
 </html>
