finished cards structure

--- a/index.html
+++ b/index.html
@@ -85,17 +85,77 @@
                     <span>oppure <a href="">acquista ora</a></span>
                     <hr>
                 </div>
+                <!-- FINE MID-CARD -->
 
-
+                <div class="bottom-card">
+                    <h4>Punti salienti del piano</h4>
+                    <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                    <span>Cartelle offline su dispositivi mobili</span>
+                </div>
 
             </div>
 
+
+            <!-- CARD 2 -->
             <div class="card">
-                
+                <span class="header-card">Singolo</span>
+                <!-- FINE HEAD-CARD -->
+                <div class="top-card">
+                    <h3>Professional</h3>
+                    <span>&euro;12.00</span>
+                    <span>/mese</span>
+                </div>
+                    <!-- FINE TOP-CARD -->
+
+                <div class="mid-card">
+                    <span>1 utente</span>
+                    <span>5 TB di spazio di archiviazione sicuro</span>
+                    <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                    <div class="button-blue">Prova gratis per 30 giorni</div>
+                    <span>oppure <a href="">acquista ora</a></span>
+                    <hr>
+                </div>
+                <!-- FINE MID-CARD -->
+
+                <div class="bottom-card">
+                    <h4>Punti salienti del piano</h4>
+                    <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                    <span>Cartelle offline su dispositivi mobili</span>
+                    <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                    <span>Cartelle offline su dispositivi mobili</span>
+                    <span>Cartelle offline su dispositivi mobili</span>
+                </div>
+
             </div>
 
+
+            <!-- CARD3 -->
             <div class="card">
-                
+                <span class="header-card">Singolo</span>
+                <!-- FINE HEAD-CARD -->
+                <div class="top-card">
+                    <h3>Professional</h3>
+                    <span>&euro;12.00</span>
+                    <span>/mese</span>
+                </div>
+                    <!-- FINE TOP-CARD -->
+
+                <div class="mid-card">
+                    <span>1 utente</span>
+                    <span>5 TB di spazio di archiviazione sicuro</span>
+                    <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                    <div class="button-blue">Prova gratis per 30 giorni</div>
+                    <span>oppure <a href="">acquista ora</a></span>
+                    <hr>
+                </div>
+                <!-- FINE MID-CARD -->
+
+                <div class="bottom-card">
+                    <h4>Punti salienti del piano</h4>
+                    <span>Invia file fino a 100 GB con Dropbox Transfert</span>
+                    <span>Cartelle offline su dispositivi mobili</span>
+                </div>
+
             </div>
         </div>
 
