end of cards (orizontal)

--- a/index.html
+++ b/index.html
@@ -159,6 +159,20 @@
             </div>
         </div>
 
+        <div id="footer-sect-2">
+            <span class="header-card">Team</span>
+            <div class="body-foot-sect2">
+                <div id="foot-sect2-left">
+                <h4>Enterprise</h4>
+                <h6>contatta l'ufficio vendite per i prezzi</h6>
+                </div>
+            
+                <div class="button-blue">Contatta l'ufficio vendite</div>
+                
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis sint nihil natus soluta ipsa, laborum tempore illo et voluptates recusandae deserunt atque quasi voluptatem. Animi at eos consequuntur saepe molestiae?</p>
+        </div>
+
     </div>
 
 </body>
