--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                 <p class="button-blue">Inizia la tua prova gratuita</p>
                 <p>Annulla in qualsiasi momento</p>
-                <a href=""><i class="fa-solid fa-arrow-down"></i></a>
+                <a href="#sect-2"><i class="fa-solid fa-arrow-down"></i></a>
             </div>
             
             <figure>
@@ -172,6 +172,24 @@
             </div>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis sint nihil natus soluta ipsa, laborum tempore illo et voluptates recusandae deserunt atque quasi voluptatem. Animi at eos consequuntur saepe molestiae?</p>
         </div>
+
+    </div>
+
+    <!-- SEZIONE 3 (PARTNER) -->
+    <div id="sect-3">
+        <figure>
+            <img src="./assets/img/partner.png" alt="">
+        </figure>
+
+        <div id="right-sect3">  
+            <h3>Entra in contatto con un partner Dropbox</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur nesciunt possimus harum dolorem vitae quisquam expedita sint voluptatem iusto, maiores optio deserunt totam ducimus eos excepturi, numquam doloremque, repellat eius?</p>
+            <span id="button-sect3">Trova un partner</span>
+        </div>
+    </div>
+
+    <!-- SEZIONE 4 -->
+    <div id="sect-4">
 
     </div>
 
