--- a/index.html
+++ b/index.html
@@ -184,13 +184,93 @@
         <div id="right-sect3">  
             <h3>Entra in contatto con un partner Dropbox</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur nesciunt possimus harum dolorem vitae quisquam expedita sint voluptatem iusto, maiores optio deserunt totam ducimus eos excepturi, numquam doloremque, repellat eius?</p>
-            <span id="button-sect3">Trova un partner</span>
+            <a href=""><span id="button-sect3">Trova un partner</span></a>
         </div>
     </div>
 
     <!-- SEZIONE 4 -->
     <div id="sect-4">
+        <h2>Esegui più operazioni con Dropbox Business</h2>
+        <div id="container-cards-sect4">
 
+            <div class="card-sect4">
+                <figure>
+                    <img src="./assets/img/business-feature-coordinate-it.png" alt="">
+                </figure>
+
+                <div class="txt-sect4">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt commodi dolorum maxime aliquam dolor delectus, odio ipsam facilis in voluptates eaque ducimus impedit sequi beatae, repudiandae laborum quasi obcaecati? Ducimus.</p>
+                </div>
+
+            </div>
+
+            <!-- card 2 -->
+            <div class="card-sect4">
+                <figure>
+                    <img src="./assets/img/business-feature-multi-device.png" alt="">
+                </figure>
+
+                <div class="txt-sect4">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt commodi dolorum maxime aliquam dolor delectus, odio ipsam facilis in voluptates eaque ducimus impedit sequi beatae, repudiandae laborum quasi obcaecati? Ducimus.</p>
+                </div>
+
+            </div>
+
+            <!-- card 3 -->
+            <div class="card-sect4">
+                <figure>
+                    <img src="./assets/img/business-feature-multi-device.png" alt="">
+                </figure>
+
+                <div class="txt-sect4">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt commodi dolorum maxime aliquam dolor delectus, odio ipsam facilis in voluptates eaque ducimus impedit sequi beatae, repudiandae laborum quasi obcaecati? Ducimus.</p>
+                </div>
+
+            </div>
+
+             <!-- card 4 -->
+            <div class="card-sect4">
+                <figure>
+                    <img src="./assets/img/business-feature-multi-device.png" alt="">
+                </figure>
+
+                <div class="txt-sect4">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt commodi dolorum maxime aliquam dolor delectus, odio ipsam facilis in voluptates eaque ducimus impedit sequi beatae, repudiandae laborum quasi obcaecati? Ducimus.</p>
+                </div>
+
+            </div>
+
+             <!-- card 5 -->
+            <div class="card-sect4">
+                <figure>
+                    <img src="./assets/img/business-feature-multi-device.png" alt="">
+                </figure>
+
+                <div class="txt-sect4">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt commodi dolorum maxime aliquam dolor delectus, odio ipsam facilis in voluptates eaque ducimus impedit sequi beatae, repudiandae laborum quasi obcaecati? Ducimus.</p>
+                </div>
+
+            </div>
+
+             <!-- card 6 -->
+            <div class="card-sect4">
+                <figure>
+                    <img src="./assets/img/business-feature-multi-device.png" alt="">
+                </figure>
+
+                <div class="txt-sect4">
+                    <h3>Passa di meno da uno strumento all'altro</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt commodi dolorum maxime aliquam dolor delectus, odio ipsam facilis in voluptates eaque ducimus impedit sequi beatae, repudiandae laborum quasi obcaecati? Ducimus.</p>
+                </div>
+
+            </div>
+
+        </div>
     </div>
 
 </body>
