--- a/index.html
+++ b/index.html
@@ -271,6 +271,12 @@
             </div>
 
         </div>
+        
+        <!-- FOOTER SECT 4 -->
+        <div id="footer-sect4">
+            <h2>Più di 500.00 team utilizzano Dropbox Business</h2>
+            <a href="">Scopri di più sui nostri clienti</a>
+        </div>
     </div>
 
 </body>
