sect 6 domande frequenti responsive

--- a/index.html
+++ b/index.html
@@ -334,5 +334,39 @@
             </div> 
         </div>
     </div>
+    <!-- FOOTER SECT 5 -->
+    <div id="footer-sect5">
+        <div id="text-footer-sect5">
+        <h2>Porta Dropbox Business nella tua azienda</h2>
+        <span id="button-sect5">Inizia la tua prova gratuita</span>
+        </div>
+    </div>
+
+    <!-- SEZIONE 6-->
+
+    <div id="sect-6">
+        <h2>Domande frequenti</h2>
+        <div class="question">
+            <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+            <i class="fa-solid fa-chevron-down"></i>
+            <i class="fa-solid fa-chevron-up"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae dicta voluptate atque exercitationem culpa molestias magnam illo quia obcaecati, sunt laudantium reprehenderit magni soluta. Assumenda dolor nobis molestias dolorum ipsum.</p>
+        </div>
+
+        <div class="question">
+            <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+            <i class="fa-solid fa-chevron-down"></i>
+            <i class="fa-solid fa-chevron-up"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae dicta voluptate atque exercitationem culpa molestias magnam illo quia obcaecati, sunt laudantium reprehenderit magni soluta. Assumenda dolor nobis molestias dolorum ipsum.</p>
+        </div>
+
+        <div class="question">
+            <span>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</span>
+            <i class="fa-solid fa-chevron-down"></i>
+            <i class="fa-solid fa-chevron-up"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae dicta voluptate atque exercitationem culpa molestias magnam illo quia obcaecati, sunt laudantium reprehenderit magni soluta. Assumenda dolor nobis molestias dolorum ipsum.</p>
+        </div>
+    </div>
+
 </body>
 </html>
