--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <div id="container-cards">
             <div class="card">
-                <span class="header-card">Singolo</span>
+                <span class="header-card"><i class="fa-solid fa-user"></i>Singolo</span>
                 <!-- FINE HEAD-CARD -->
                 <div class="top-card">
                     <h3>Professional</h3>
@@ -367,6 +367,77 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae dicta voluptate atque exercitationem culpa molestias magnam illo quia obcaecati, sunt laudantium reprehenderit magni soluta. Assumenda dolor nobis molestias dolorum ipsum.</p>
         </div>
     </div>
+
+
+    <!-- SEZIONE 7 (FOOTER) -->
+    <footer>
+        <div id="footer-main">
+            <div class="foot-col">
+                <h4>Dropbox</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+
+            <div class="foot-col">
+                <h4>Dropbox</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+
+            <div class="foot-col">
+                <h4>Dropbox</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+
+            <div class="foot-col">
+                <h4>Dropbox</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+
+            <div class="foot-col">
+                <h4>Dropbox</h4>
+                <ul>
+                    <li>Applicazione desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+        </div>
+
+        <div id="footer-bottom">
+            <hr>
+            <div id="text-foot-bottom">
+                
+                <i class="fa-solid fa-earth-americas"></i>
+                <span>Italiano</span>
+                <i class="fa-solid fa-chevron-up"></i>
+            </div>
+        </div>
+    </footer>
 
 </body>
 </html>
