--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
                     <!-- FINE TOP-CARD -->
 
                 <div class="mid-card">
-                    <span>1 utente</span>
-                    <span>5 TB di spazio di archiviazione sicuro</span>
-                    <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                    <span><i class="fa-solid fa-user"></i>1 utente</span>
+                    
+                    <span><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</span>
+                    <span><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</span>
                     <div class="button-blue">Prova gratis per 30 giorni</div>
                     <span>oppure <a href="">acquista ora</a></span>
                     <hr>
@@ -89,8 +90,8 @@
 
                 <div class="bottom-card">
                     <h4>Punti salienti del piano</h4>
-                    <span>Invia file fino a 100 GB con Dropbox Transfert</span>
-                    <span>Cartelle offline su dispositivi mobili</span>
+                    <span><i class="fa-solid fa-check"></i>Invia file fino a 100 GB con Dropbox Transfert</span>
+                    <span><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</span>
                 </div>
 
             </div>
@@ -98,7 +99,7 @@
 
             <!-- CARD 2 -->
             <div class="card">
-                <span class="header-card">Singolo</span>
+                <span class="header-card"><i class="fa-solid fa-users"></i>Team</span>
                 <!-- FINE HEAD-CARD -->
                 <div class="top-card">
                     <h3>Professional</h3>
@@ -108,9 +109,9 @@
                     <!-- FINE TOP-CARD -->
 
                 <div class="mid-card">
-                    <span>1 utente</span>
-                    <span>5 TB di spazio di archiviazione sicuro</span>
-                    <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                    <span><i class="fa-solid fa-user"></i>1 utente</span>
+                    <span><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</span>
+                    <span><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</span>
                     <div class="button-blue">Prova gratis per 30 giorni</div>
                     <span>oppure <a href="">acquista ora</a></span>
                     <hr>
@@ -119,11 +120,11 @@
 
                 <div class="bottom-card">
                     <h4>Punti salienti del piano</h4>
-                    <span>Invia file fino a 100 GB con Dropbox Transfert</span>
-                    <span>Cartelle offline su dispositivi mobili</span>
-                    <span>Invia file fino a 100 GB con Dropbox Transfert</span>
-                    <span>Cartelle offline su dispositivi mobili</span>
-                    <span>Cartelle offline su dispositivi mobili</span>
+                    <span><i class="fa-solid fa-check"></i>Invia file fino a 100 GB con Dropbox Transfert</span>
+                    <span><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</span>
+                    <span><i class="fa-solid fa-check"></i>Invia file fino a 100 GB con Dropbox Transfert</span>
+                    <span><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</span>
+                    <span><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</span>
                 </div>
 
             </div>
@@ -131,7 +132,7 @@
 
             <!-- CARD3 -->
             <div class="card">
-                <span class="header-card">Singolo</span>
+                <span class="header-card"><i class="fa-solid fa-building"></i>Azienda</span>
                 <!-- FINE HEAD-CARD -->
                 <div class="top-card">
                     <h3>Professional</h3>
@@ -141,9 +142,9 @@
                     <!-- FINE TOP-CARD -->
 
                 <div class="mid-card">
-                    <span>1 utente</span>
-                    <span>5 TB di spazio di archiviazione sicuro</span>
-                    <span>Funzioni di produttività premium e condivisione file semplice e sicura</span>
+                    <span><i class="fa-solid fa-user"></i>1 utente</span>
+                    <span><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</span>
+                    <span><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</span>
                     <div class="button-blue">Prova gratis per 30 giorni</div>
                     <span>oppure <a href="">acquista ora</a></span>
                     <hr>
@@ -152,15 +153,16 @@
 
                 <div class="bottom-card">
                     <h4>Punti salienti del piano</h4>
-                    <span>Invia file fino a 100 GB con Dropbox Transfert</span>
-                    <span>Cartelle offline su dispositivi mobili</span>
+                    <span><i class="fa-solid fa-check"></i>Invia file fino a 100 GB con Dropbox Transfert</span>
+                    <span><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</span>
+                    <span><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</span>
                 </div>
 
             </div>
         </div>
 
         <div id="footer-sect-2">
-            <span class="header-card">Team</span>
+            <span class="header-card"><i class="fa-solid fa-building"></i>Team</span>
             <div class="body-foot-sect2">
                 <div id="foot-sect2-left">
                 <h4>Enterprise</h4>
